Jenkins/k8s_nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus3-service
  namespace: nexus3
spec:
  type: NodePort 
  selector:
    app: nexus3
  ports:
  - port: 80
    targetPort: 8081
